<resources>
    <string name="app_name">FindingFalcon</string>
    <string name="find_falcone">Find Falcone</string>
    <string name="finding_falcone">Finding Falcone</string>
    <string name="destination_one">Destination 1</string>
    <string name="destination_two">Destination 2</string>
    <string name="destination_three">Destination 3</string>
    <string name="destination_four">Destination 4</string>
    <string name="select_vehicle">Select Vehicle</string>
    <string name="select_planet">Select Planet</string>
    <string name="vehicle_with_count">%s (%d)</string>
    <string name="time_taken">Time Taken : %d</string>
    <string name="planet_found">Planet Found : %s</string>
    <string name="congratulations_message">Success! Congratulations on Finding Falcone.\n\nKing Shan is Mighty Pleased.</string>
    <string name="failed_message">Failed! Unable to Find Falcone.\n\nKing Shan is Not Pleased.</string>
    <string name="reset">Reset</string>
    <string name="try_again">Try Again</string>
    <string name="start_again">Start Again</string>
    <string name="validation_message">Select all destination and vehicle to continue!</string>
    <string name="finding_falcone_title">Finding Falcone!</string>
    <string name="select_planets_you_want_to_search_in">Select planets you want to search in</string>
    <string name="out_of_range">Out of range</string>
</resources>