<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.MainActivity">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toTopOf="@+id/timeTaken"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center"
                android:text="@string/finding_falcone_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/black"
                app:layout_constraintBottom_toTopOf="@+id/findFalcone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center"
                android:text="@string/select_planets_you_want_to_search_in"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/black"
                app:layout_constraintBottom_toTopOf="@+id/findFalcone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/destination_background"
                android:orientation="vertical"
                android:padding="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/destination_one"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/destination1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/text_view_background"
                    android:padding="10dp"
                    android:text="@string/select_planet"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/black"
                    app:drawableEndCompat="@drawable/ic_down_arrow" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/vehicle1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/text_view_background"
                    android:padding="10dp"
                    android:text="@string/select_vehicle"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/black"
                    android:visibility="gone"
                    app:drawableEndCompat="@drawable/ic_down_arrow"
                    tools:visibility="visible" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="@drawable/destination_background"
                android:orientation="vertical"
                android:padding="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/destination_two"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/destination2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/text_view_background"
                    android:padding="10dp"
                    android:text="@string/select_planet"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/black"
                    app:drawableEndCompat="@drawable/ic_down_arrow" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/vehicle2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/text_view_background"
                    android:padding="10dp"
                    android:text="@string/select_vehicle"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/black"
                    android:visibility="gone"
                    app:drawableEndCompat="@drawable/ic_down_arrow"
                    tools:visibility="visible" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="@drawable/destination_background"
                android:orientation="vertical"
                android:padding="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/destination_three"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/destination3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/text_view_background"
                    android:padding="10dp"
                    android:text="@string/select_planet"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/black"
                    app:drawableEndCompat="@drawable/ic_down_arrow" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/vehicle3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/text_view_background"
                    android:padding="10dp"
                    android:text="@string/select_vehicle"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/black"
                    android:visibility="gone"
                    app:drawableEndCompat="@drawable/ic_down_arrow"
                    tools:visibility="visible" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="@drawable/destination_background"
                android:orientation="vertical"
                android:padding="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/destination_four"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/destination4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/text_view_background"
                    android:padding="10dp"
                    android:text="@string/select_planet"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/black"
                    app:drawableEndCompat="@drawable/ic_down_arrow" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/vehicle4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/text_view_background"
                    android:padding="10dp"
                    android:text="@string/select_vehicle"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/black"
                    android:visibility="gone"
                    app:drawableEndCompat="@drawable/ic_down_arrow"
                    tools:visibility="visible" />

            </LinearLayout>
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/resetGame"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:text="@string/reset"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/findFalcone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/timeTaken"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/resetGame"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="Time Taken :0" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/findFalcone"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:text="@string/find_falcone"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/selection_state"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toTopOf="@+id/progress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="@color/selection_state"
        app:strokeWidth="2dp" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/mainViewGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="findFalcone,timeTaken,resetGame,scrollView" />

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progress"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:indeterminate="true"
        android:paddingHorizontal="0dp"
        android:paddingBottom="0dp"
        app:hideAnimationBehavior="inward"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:showAnimationBehavior="outward" />


</androidx.constraintlayout.widget.ConstraintLayout>